@@ -23,6 +23,7 @@ Trunk (unreleased changes)
     HADOOP-1780 Regions are still being doubly assigned
     HADOOP-1797 Fix NPEs in MetaScanner constructor
     HADOOP-1799 Incorrect classpath in binary version of Hadoop
+    HADOOP-1805 Region server hang on exit
 
   IMPROVEMENTS
     HADOOP-1737 Make HColumnDescriptor data publically members settable
